--- a/site/index.html
+++ b/site/index.html
@@ -326,8 +326,8 @@
           >
         </dt>
         <dd>
-          The forth experiment in the series six of making site/pages relying
-          on only HTML without JavaScript, CSS, or images. This one produces an
+          The forth experiment in the series six of making site/pages relying on
+          only HTML without JavaScript, CSS, or images. This one produces an
           animation effect by using meta redirect tags to cycle between pages.
           (Note that you may have to close the page to stop it)
         </dd>
@@ -354,14 +354,16 @@
           ones)
         </dd>
 
-
         <dt>
-        <a href="https://html-random-pattern.alanwsmith.com/">
-          html-random-pattern.alanwsmith.com
-        </a>
-        <dd>A grid with random colors.
-        The sixth no javascript, css, images experiment. </dd>
+          <a href="https://html-random-pattern.alanwsmith.com/">
+            html-random-pattern.alanwsmith.com
+          </a>
+        </dt>
 
+        <dd>
+          A grid with random colors. The sixth no javascript, css, images
+          experiment.
+        </dd>
 
         <dt>
           <a href="https://ideas.alanwsmith.com/">ideas.alanwsmith.com</a>
@@ -533,6 +535,17 @@
         <dd>
           I wanted to see what would happen if you encoded time into a QR code.
           This is it
+        </dd>
+
+        <dt>
+          <a href="https://reader.alanwsmith.com/">reader.alanwsmith.com</a>
+        </dt>
+        <dd>
+          The idea behind this one is to make it easier for me to read
+          documentation. Or, really, to keep my place when I'm reading through
+          docs. Right now it's just the Org-mode manual split into individual
+          pages. The key is that it remembers what page I'm on so I just open
+          the site and pick up where I left off.
         </dd>
 
         <dt>
