Removed Hacyaderm or however it's spelled

--- a/site/index.html
+++ b/site/index.html
@@ -202,8 +202,7 @@
       <p>
         You can find me on:
         <a href="https://twitter.com/TheIdOfAlan">Twitter</a> a lot,
-        <a href="https://www.twitch.tv/theidofalan">Twitch</a> occasionally, and
-        <a href="https://hachyderm.io/">Hachyderm</a> more and more
+        <a href="https://www.twitch.tv/theidofalan">Twitch</a> occasionally.
       </p>
       <p>
         I've got a site at
