Updated og image and added aws pricing link

--- a/site/index.html
+++ b/site/index.html
@@ -4,84 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>
-      TheLinksOfAlan, Or, How To Grow Your Digital Garden With Sub-Domains
-    </title>
+    <title>The Links Of Alan</title>
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@theidofalan" />
     <meta
       name="twitter:image"
-      content="https://links.alanwsmith.com/og-images/main-v3.png"
+      content="https://links.alanwsmith.com/assets/og-images/main.png"
     />
 
     <meta
       name="description"
-      content="A page of links that turned into a story of how to expand your digital garden"
+      content="The various places I've put stuff on the web."
     />
 
-    <meta property="og:title" content="links.alanwsmith.com" />
+    <meta property="og:title" content="The Links Of Alan" />
     <meta
       property="og:description"
-      content="A page of links that turned into a story of how to expand your digital garden"
+      content="The various places I've put stuff on the web."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://links.alanwsmith.com/" />
     <meta
       property="og:image"
-      content="https://links.alanwsmith.com/og-images/main-v3.png"
+      content="https://links.alanwsmith.com/assets/og-images/main.png"
     />
 
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/favicons/16x16.png"
+      href="/assets/favicons/16x16.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/favicons/32x32.png"
+      href="/assets/favicons/32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="96x96"
-      href="/favicons/96x96.png"
+      href="/assets/favicons/96x96.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="128x128"
-      href="/favicons/128x128.png"
+      href="/assets/favicons/128x128.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="196x196"
-      href="/favicons/196x196.png"
+      href="/assets/favicons/196x196.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="228x228"
-      href="/favicons/228x228.png"
+      href="/assets/favicons/228x228.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="152x152"
-      href="/favicons/152x152.png"
+      href="/assets/favicons/152x152.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="167x167"
-      href="/favicons/167x167.png"
+      href="/assets/favicons/167x167.png"
     />
     <link
       rel="apple-touch-icon-precomposed"
       sizes="180x180"
-      href="/favicons/180x180.png"
+      href="/assets/favicons/180x180.png"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -198,24 +196,24 @@
     </header>
     <main>
       <h3>First things first</h3>
-      <p>Welcome to my links page</p>
       <p>
-        You can find me on:
-        <a href="https://twitter.com/TheIdOfAlan">Twitter</a> a lot,
-        <a href="https://www.twitch.tv/theidofalan">Twitch</a> occasionally.
-      </p>
-      <p>
-        I've got a site at
-        <a href="https://www.alanwsmith.com">alanwsmith.com</a> and a
+        Welcome to my links page. You can find me on
+        <a href="https://www.alanwsmith.com">my main site</a>,
+        <a href="https://twitter.com/TheIdOfAlan">Twitter</a>,
+        <a href="https://www.twitch.tv/theidofalan">Twitch</a>, and the
+        occasional
         <a href="https://podcast.alanwsmith.com/">podcast</a>
       </p>
       <p>
-        I'm also growing a Digital Garden of sub-domains listed below. (I
+        But, the real point of this page is to point you to the various
+        sub-domains that make up my Digital Garden. (This page originally
+        included my
         <a
           href="https://www.alanwsmith.com/posts/28dakarfdsyq--how-to-grow-your-digital-garden-with-subdomains"
-          >encourage you to play with your own sub-domains</a
+          >How To Grow Your Digital Garden With Sub-Domains</a
         >
-        too)
+        piece. It's a good read if you want some inspiration to get started
+        setting up your own)
       </p>
 
       <h3>My Digital Garden</h3>
@@ -227,7 +225,9 @@
         <dd>
           The place where it all began. This is my main site/blog. It&apos;s
           personal so I post about whatever happens to have my interest. Music,
-          movies, code, having bipolar disorder, whatever.
+          movies, code, having bipolar disorder, whatever. It's also not
+          organized right now. It's just an alphabetical listing of links.
+          Improving that is definitely on the to-do list.
         </dd>
 
         <dt>
@@ -258,6 +258,19 @@
             >this tweet from whitep4nth3r</a
           >
           about HTML only web sites.
+        </dd>
+
+        <dt>
+          <a href="https://aws-pricing-sdk-attributes.alanwsmith.com/">
+            aws-pricing-sdk-attributes.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          I had to dig through the AWS pricing SDK APIs while working on an EC2
+          pricing comparison for blender rendering. It took a while to figure
+          out how to get at the data. This is the initial data set you can use
+          to filter requests. Hoping it helps save folks some time by not having
+          to bang their heads against this part themselves.
         </dd>
 
         <dt>
