--- a/site/index.html
+++ b/site/index.html
@@ -261,12 +261,12 @@
         </dd>
 
         <dt>
-          <a href="https://aws-pricing-sdk-attributes.alanwsmith.com/">
-            aws-pricing-sdk-attributes.alanwsmith.com</a
+          <a href="https://aws-price-list-api-values.alanwsmith.com/">
+            aws-price-list-api-values.alanwsmith.com</a
           >
         </dt>
         <dd>
-          I had to dig through the AWS pricing SDK APIs while working on an EC2
+          I had to dig through the AWS pricing APIs while working on an EC2
           pricing comparison for blender rendering. It took a while to figure
           out how to get at the data. This is the initial data set you can use
           to filter requests. Hoping it helps save folks some time by not having
