Added ec2 pricing link

--- a/site/index.html
+++ b/site/index.html
@@ -6,25 +6,20 @@
 
     <title>The Links Of Alan</title>
 
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="The Links Of Alan" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:creator" content="@theidofalan" />
-    <meta
-      name="twitter:image"
-      content="https://links.alanwsmith.com/assets/og-images/main.png"
-    />
-
+    <meta name="twitter:site:id" content="@TheIdOfAlan" />
+    <meta name="twitter:creator" content="@TheIdOfAlan" />
     <meta
       name="description"
       content="The various places I've put stuff on the web."
     />
 
-    <meta property="og:title" content="The Links Of Alan" />
     <meta
       property="og:description"
       content="The various places I've put stuff on the web."
     />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://links.alanwsmith.com/" />
     <meta
       property="og:image"
       content="https://links.alanwsmith.com/assets/og-images/main.png"
@@ -258,6 +253,17 @@
             >this tweet from whitep4nth3r</a
           >
           about HTML only web sites.
+        </dd>
+
+        <dt>
+          <a href="https://aws-ec2-pricing.alanwsmith.com/">
+            aws-ec2-pricing.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          I finally got fed up with how difficult it is to figure out EC2
+          pricing so I put this togehter. (The specific goal at the time was to
+          price out the different GPU instances to look at blender rendering.)
         </dd>
 
         <dt>
