Repointed link for ec2 pricing

--- a/site/index.html
+++ b/site/index.html
@@ -256,17 +256,6 @@
         </dd>
 
         <dt>
-          <a href="https://aws-ec2-pricing.alanwsmith.com/">
-            aws-ec2-pricing.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          I finally got fed up with how difficult it is to figure out EC2
-          pricing so I put this togehter. (The specific goal at the time was to
-          price out the different GPU instances to look at blender rendering.)
-        </dd>
-
-        <dt>
           <a href="https://aws-price-list-api-values.alanwsmith.com/">
             aws-price-list-api-values.alanwsmith.com</a
           >
@@ -287,6 +276,16 @@
         <dd>
           I&apos;m always on the look out for band names. I&apos;ve started
           collecting them here
+        </dd>
+
+        <dt>
+          <a href="https://bright-screen-flash-alert.alanwsmith.com/"
+            >bright-screen-flash-alert.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          Designed primarily for streams who work in dark mode. This plays a
+          little yelling sound for chat when they hit a page without it.
         </dd>
 
         <dt>
@@ -318,6 +317,17 @@
             href="https://developer.mozilla.org/en-US/docs/Web/API/Window/devicePixelRatio"
             >Device Pixel Ratio</a
           >
+        </dd>
+
+        <dt>
+          <a href="https://ec2-price-list.alanwsmith.com/">
+            ec2-price-list.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          I finally got fed up with how difficult it is to figure out EC2
+          pricing so I put this togehter. (The specific goal at the time was to
+          price out the different GPU instances to look at blender rendering.)
         </dd>
 
         <dt>
