--- a/site/index.html
+++ b/site/index.html
@@ -20,6 +20,7 @@
       property="og:description"
       content="The various places I've put stuff on the web."
     />
+
     <meta
       property="og:image"
       content="https://links.alanwsmith.com/assets/og-images/main.png"
@@ -149,6 +150,8 @@
 
       h4 {
         font-size: 1.5rem;
+        padding-bottom: 0px;
+        margin-bottom: 0px;
       }
 
       header {
@@ -214,21 +217,46 @@
       <h3>My Digital Garden</h3>
 
       <dl>
-        <!-- LINKS -->
+        
+<dt>
+<h4><a href="https://www.alanwsmith.com/">alanwsmith.com</a></h4>
+<div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>The place where it all began. This is my main site/blog. It&apos;s personal so I post about whatever happens to have my interest. Music, movies, code, having bipolar disorder, whatever. It's also not organized right now. It's just an alphabetical listing of links. Improving that is definitely on the to-do list.</p>
+</dd>
 
-        <dt><a href="https://www.alanwsmith.com/">alanwsmith.com</a></dt>
-        <dd>
-          The place where it all began. This is my main site/blog. It&apos;s
-          personal so I post about whatever happens to have my interest. Music,
-          movies, code, having bipolar disorder, whatever. It's also not
-          organized right now. It's just an alphabetical listing of links.
-          Improving that is definitely on the to-do list.
-        </dd>
+<dt>
+<h4><a href="https://areyoucurrentlyalive.alanwsmith.com/">Are You Currently Alive</a></h4>
+<div class="url_display"><a href="https://areyoucurrentlyalive.alanwsmith.com/">AreYouCurrentlyAlive.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>Build this one in the spirit of <a href="http://www.hasthelargehadroncolliderdestroyedtheworldyet.com/">Has The Large Hadron Collider Destroyed The World Yet.com</a> for Netlify's 2021 <a href="https://dusty.domains/">Dusty Domains</a>. The little page was worth $500 to charity.</p>
+</dd>
+
+<dt>
+<h4><a href="https://ascii-art.alanwsmith.com/">ASCII Art</a></h4>
+<div class="url_display"><a href="https://ascii-art.alanwsmith.com/">ascii-art.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A few famous pieces of art turned into ASCII. This is one of five experiments in making a site out of just HTML. There&apos;s no JavaScript, CSS, or image calls. Just the HTML. The idea came from <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649">this tweet from whitep4nth3r</a> about HTML only web sites.</p>
+</dd>
+
+<dt>
+<h4><a href="https://aws-price-list-api-values.alanwsmith.com/">AWS API Price List Values</a></h4>
+<div class="url_display"><a href="https://aws-price-list-api-values.alanwsmith.com/">aws-price-list-api-values.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>I had to dig through the AWS pricing APIs while working on an EC2 pricing comparison for blender rendering. It took a while to figure out how to get at the data. This is the initial data set you can use to filter requests. Hoping it helps save folks some time by not having to bang their heads against this part themselves.</p>
+</dd>
 
         <dt>
-          <a href="https://areyoucurrentlyalive.alanwsmith.com/"
-            >AreYouCurrentlyAlive.alanwsmith.com</a
-          >
+          <h4>
+            <a href="https://areyoucurrentlyalive.alanwsmith.com/"
+              >Are You Currently Alive</a
+            >
+          </h4>
+          <div class="url">areyoucurrentlyalive.alanwsmith.com</div>
         </dt>
         <dd>
           Build this one in the spirit of
@@ -237,7 +265,7 @@
             >Has The Large Hadron Collider Destroyed The World Yet.com</a
           >
           for Netlify's 2021 <a href="https://dusty.domains/">Dusty Domains</a>.
-          The little page was worth $500 to charity.
+          The little page was worth 500 to charity.
         </dd>
 
         <dt>
@@ -320,6 +348,16 @@
         </dd>
 
         <dt>
+          <a href="https://ec2-blender-renderer.alanwsmith.com/">
+            ec2-blender-renderer.alanwsmith.com</a
+          >
+        </dt>
+        <dd>
+          Taking a look at what it would cost to use Amazon AWS EC2 cloud
+          computers to render Blender 3D images
+        </dd>
+
+        <dt>
           <a href="https://ec2-price-list.alanwsmith.com/">
             ec2-price-list.alanwsmith.com</a
           >
@@ -334,7 +372,7 @@
           <a href="https://hacking.alanwsmith.com/">hacking.alanwsmith.com</a>
         </dt>
         <dd>
-          This is what hacking looks like. Also, another site that got $500 for
+          This is what hacking looks like. Also, another site that got 500 for
           charity as part of <a href="https://dusty.domains/">Dusty Domains</a>
         </dd>
 
