Making progress converting sites to basic config data

--- a/site/index.html
+++ b/site/index.html
@@ -250,123 +250,67 @@
 <p>I had to dig through the AWS pricing APIs while working on an EC2 pricing comparison for blender rendering. It took a while to figure out how to get at the data. This is the initial data set you can use to filter requests. Hoping it helps save folks some time by not having to bang their heads against this part themselves.</p>
 </dd>
 
-        <dt>
-          <h4>
-            <a href="https://areyoucurrentlyalive.alanwsmith.com/"
-              >Are You Currently Alive</a
-            >
-          </h4>
-          <div class="url">areyoucurrentlyalive.alanwsmith.com</div>
-        </dt>
-        <dd>
-          Build this one in the spirit of
-          <a
-            href="http://www.hasthelargehadroncolliderdestroyedtheworldyet.com/"
-            >Has The Large Hadron Collider Destroyed The World Yet.com</a
-          >
-          for Netlify's 2021 <a href="https://dusty.domains/">Dusty Domains</a>.
-          The little page was worth 500 to charity.
-        </dd>
+<dt>
+<h4><a href="https://bright-screen-flash-alert.alanwsmith.com/">Bright Screen Flash Alert</a></h4>
+<div class="url_display"><a href="https://bright-screen-flash-alert.alanwsmith.com/">bright-screen-flash-alert.alanwsmith.com</a></div>
+</dt>
+<dd>
+Designed primarily for streams who work in dark mode. This plays a little yelling sound for chat when they hit a page without it.
+</dd>
 
-        <dt>
-          <a href="https://ascii-art.alanwsmith.com/"
-            >ascii-art.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          A few famous pieces of art turned into ASCII. This is one of five
-          experiments in making a site out of just HTML. There&apos;s no
-          JavaScript, CSS, or image calls. Just the HTML. The idea came from
-          <a href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
-            >this tweet from whitep4nth3r</a
-          >
-          about HTML only web sites.
-        </dd>
+<dt>
+<h4><a href="https://cloudinary-image-maker.alanwsmith.com/">Cloudinary Image Maker</a></h4>
+<div class="url_display"><a href="https://cloudinary-image-maker.alanwsmith.com/">cloudinary-image-maker.alanwsmith.com</a></div>
+</dt>
+<dd>
+  I got tired of trying to assemble Cloudinary urls. Took less time to make this than I spent trying to figure out how to apply text to an image by hand.
+</dd>
 
-        <dt>
-          <a href="https://aws-price-list-api-values.alanwsmith.com/">
-            aws-price-list-api-values.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          I had to dig through the AWS pricing APIs while working on an EC2
-          pricing comparison for blender rendering. It took a while to figure
-          out how to get at the data. This is the initial data set you can use
-          to filter requests. Hoping it helps save folks some time by not having
-          to bang their heads against this part themselves.
-        </dd>
+<dt>
+<h4><a href="https://d3-playground.alanwsmith.com/">D3 Playground</a></h4>
+<div class="url_display"><a href="https://d3-playground.alanwsmith.com/">d3-playground.alanwsmith.com/</a></div>
+</dt>
+<dd>
+A place to mess around with D3. Just getting started on this one: TODO: Move this one to d3-cookbook
+</dd>
 
-        <dt>
-          <a href="https://band-names.alanwsmith.com/"
-            >band-names.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          I&apos;m always on the look out for band names. I&apos;ve started
-          collecting them here
-        </dd>
+<dt>
+<h4><a href="https://ec2-blender-renderer.alanwsmith.com/">EC2 Blender Renderer</a></h4>
+<div class="url_display"><a href="https://ec2-blender-renderer.alanwsmith.com/">https://ec2-blender-renderer.alanwsmith.com/</a></div>
+</dt>
+<dd>
+Taking a look at what it would cost to use Amazon AWS EC2 cloud computers to render Blender 3D images
+</dd>
 
-        <dt>
-          <a href="https://bright-screen-flash-alert.alanwsmith.com/"
-            >bright-screen-flash-alert.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          Designed primarily for streams who work in dark mode. This plays a
-          little yelling sound for chat when they hit a page without it.
-        </dd>
+<dt>
+<h4><a href="https://ec2-price-list.alanwsmith.com/">EC2 Simplified Price List</a></h4>
+<div class="url_display"><a href="https://ec2-price-list.alanwsmith.com/">ec2-price-list.alanwsmith.com</a></div>
+</dt>
+<dd>
+  I finally got fed up with how difficult it is to figure out EC2 pricing so I put this together. (The specific goal at the time was to price out the different GPU instances to look at blender rendering.)
+</dd>
 
-        <dt>
-          <a href="https://cloudinary-image-maker.alanwsmith.com/"
-            >cloudinary-image-maker.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          I got tired of trying to assemble Cloudinary urls. Took less time to
-          make this than I spent trying to figure out how to apply text to an
-          image by hand.
-        </dd>
+<dt>
+<h4><a href="https://band-names.alanwsmith.com/">The Name(s) Of My New Band</a></h4>
+<div class="url_display"><a href="https://band-names.alanwsmith.com/">band-names.alanwsmith.com</a></div>
+</dt>
+<dd>
+I&apos;m always on the look out for band names. I&apos;ve started collecting them here
+</dd>
 
-        <dt>
-          <a href="https://d3-playground.alanwsmith.com/"
-            >d3-playground.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          A place to mess around with D3. Just getting started on this one
-        </dd>
+<dt>
+<h4><a href="https://dpr.alanwsmith.com/">Your Device Pixel Ratio</a></h4>
+<div class="url_display"><a href="https://dpr.alanwsmith.com/">dpr.alanwsmith.com</a></div>
+</dt>
+<dd>
+A single serving site that shows your current <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/devicePixelRatio">Device Pixel Ratio</a>
+</dd>
 
-        <dt>
-          <a href="https://dpr.alanwsmith.com">dpr.alanwsmith.com</a>
-        </dt>
-        <dd>
-          A single serving site that shows your current
-          <a
-            href="https://developer.mozilla.org/en-US/docs/Web/API/Window/devicePixelRatio"
-            >Device Pixel Ratio</a
-          >
-        </dd>
 
-        <dt>
-          <a href="https://ec2-blender-renderer.alanwsmith.com/">
-            ec2-blender-renderer.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          Taking a look at what it would cost to use Amazon AWS EC2 cloud
-          computers to render Blender 3D images
-        </dd>
 
-        <dt>
-          <a href="https://ec2-price-list.alanwsmith.com/">
-            ec2-price-list.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          I finally got fed up with how difficult it is to figure out EC2
-          pricing so I put this togehter. (The specific goal at the time was to
-          price out the different GPU instances to look at blender rendering.)
-        </dd>
+
+
+
 
         <dt>
           <a href="https://hacking.alanwsmith.com/">hacking.alanwsmith.com</a>
