Continuing to migrate content

--- a/site/index.html
+++ b/site/index.html
@@ -219,6 +219,78 @@
       <dl>
         
 <dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+
+</dd>
+
+<dt>
+<h4><a href=""></a></h4>
+<div class="url_display"><a href=""></a></div>
+</dt>
+<dd>
+
+</dd>
+
+<dt>
 <h4><a href="https://www.alanwsmith.com/">alanwsmith.com</a></h4>
 <div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
 </dt>
@@ -268,7 +340,7 @@ Designed primarily for streams who work in dark mode. This plays a little yellin
 
 <dt>
 <h4><a href="https://d3-playground.alanwsmith.com/">D3 Playground</a></h4>
-<div class="url_display"><a href="https://d3-playground.alanwsmith.com/">d3-playground.alanwsmith.com/</a></div>
+<div class="url_display"><a href="https://d3-playground.alanwsmith.com/">d3-playground.alanwsmith.com</a></div>
 </dt>
 <dd>
 A place to mess around with D3. Just getting started on this one: TODO: Move this one to d3-cookbook
@@ -276,7 +348,7 @@ A place to mess around with D3. Just getting started on this one: TODO: Move thi
 
 <dt>
 <h4><a href="https://ec2-blender-renderer.alanwsmith.com/">EC2 Blender Renderer</a></h4>
-<div class="url_display"><a href="https://ec2-blender-renderer.alanwsmith.com/">https://ec2-blender-renderer.alanwsmith.com/</a></div>
+<div class="url_display"><a href="https://ec2-blender-renderer.alanwsmith.com/">ec2-blender-renderer.alanwsmith.com</a></div>
 </dt>
 <dd>
 Taking a look at what it would cost to use Amazon AWS EC2 cloud computers to render Blender 3D images
@@ -288,6 +360,54 @@ Taking a look at what it would cost to use Amazon AWS EC2 cloud computers to ren
 </dt>
 <dd>
   I finally got fed up with how difficult it is to figure out EC2 pricing so I put this together. (The specific goal at the time was to price out the different GPU instances to look at blender rendering.)
+</dd>
+
+<dt>
+<h4><a href="https://hacking.alanwsmith.com/">Hacking</a></h4>
+<div class="url_display"><a href="https://hacking.alanwsmith.com/">hacking.alanwsmith.com</a></div>
+</dt>
+<dd>
+This is what hacking looks like. Also, another site that got 500 for charity as part of <a href="https://dusty.domains/">Dusty Domains</a>
+</dd>
+
+<dt>
+<h4><a href="https://horsevatars.alanwsmith.com/">Horsevatars</a></h4>
+<div class="url_display"><a href="https://horsevatars.alanwsmith.com/">horsevatars.alanwsmith.com</a></div>
+</dt>
+<dd>
+An experiment in making multi-color avatars for <a href="https://frontend.horse/">Frontend Horse</a> 
+</dd>
+
+<dt>
+<h4><a href="https://html-animation.alanwsmith.com/">HTML Only Animation</a></h4>
+<div class="url_display"><a href="https://html-animation.alanwsmith.com/">html-animation.alanwsmith.com</a></div>
+</dt>
+<dd>
+The forth experiment in the series six of making site/pages relying on only HTML without JavaScript, CSS, or images. This one produces an animation effect by using meta redirect tags to cycle between pages. (Note that you may have to close the page to stop it)
+</dd>
+
+<dt>
+<h4><a href="https://html-display-board.alanwsmith.com/">HTML Only Display Board</a></h4>
+<div class="url_display"><a href="https://html-display-board.alanwsmith.com/">html-display-board.alanwsmith.com</a></div>
+</dt>
+<dd>
+  This was the fifth of the six experiments is seeing what can be done with only HTML (no JavaScript, CSS, or images). It uses the deprecated marquee tag to create a scrolling text display
+</dd>
+
+<dt>
+<h4><a href="https://html-maze.alanwsmith.com/">HTML Only Maze</a></h4>
+<div class="url_display"><a href="https://html-maze.alanwsmith.com/">html-maze.alanwsmith.com</a></div>
+</dt>
+<dd>
+Another of the six experiments to see what can be done with HTML alone. No JavaScript. No CSS. Just tags (including some deprecated ones)
+</dd>
+
+<dt>
+<h4><a href="https://html-random-pattern.alanwsmith.com/">HTML Only Random Pattern</a></h4>
+<div class="url_display"><a href="https://html-random-pattern.alanwsmith.com/">html-random-pattern.alanwsmith.com</a></div>
+</dt>
+<dd>
+A grid with random colors. The sixth experiment with no javascript, css, or images
 </dd>
 
 <dt>
@@ -312,68 +432,9 @@ A single serving site that shows your current <a href="https://developer.mozilla
 
 
 
-        <dt>
-          <a href="https://hacking.alanwsmith.com/">hacking.alanwsmith.com</a>
-        </dt>
-        <dd>
-          This is what hacking looks like. Also, another site that got 500 for
-          charity as part of <a href="https://dusty.domains/">Dusty Domains</a>
-        </dd>
 
-        <dt>
-          <a href="https://horsevatars.alanwsmith.com/"
-            >horsevatars.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          Playing around with making multi-color avatars for
-          <a href="https://frontend.horse/">Frontend Horse</a> as an experiment
-        </dd>
 
-        <dt>
-          <a href="https://html-animation.alanwsmith.com/"
-            >html-animation.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          The forth experiment in the series six of making site/pages relying on
-          only HTML without JavaScript, CSS, or images. This one produces an
-          animation effect by using meta redirect tags to cycle between pages.
-          (Note that you may have to close the page to stop it)
-        </dd>
 
-        <dt>
-          <a href="https://html-display-board.alanwsmith.com/"
-            >html-display-board.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          This was the fifth of the six experiments is seeing what can be done
-          with only HTML (no JavaScript, CSS, or images). It uses the deprecated
-          marquee tag to create a scrolling text display
-        </dd>
-
-        <dt>
-          <a href="https://html-maze.alanwsmith.com/"
-            >html-maze.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          Another of the six experiments to see what can be done with HTML
-          alone. No JavaScript. No CSS. Just tags (including some deprecated
-          ones)
-        </dd>
-
-        <dt>
-          <a href="https://html-random-pattern.alanwsmith.com/">
-            html-random-pattern.alanwsmith.com
-          </a>
-        </dt>
-
-        <dd>
-          A grid with random colors. The sixth no javascript, css, images
-          experiment.
-        </dd>
 
         <dt>
           <a href="https://ideas.alanwsmith.com/">ideas.alanwsmith.com</a>
