Setup for different types of links and setup links page without a link

--- a/site/index.html
+++ b/site/index.html
@@ -219,78 +219,6 @@
       <dl>
         
 <dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-
-</dd>
-
-<dt>
-<h4><a href=""></a></h4>
-<div class="url_display"><a href=""></a></div>
-</dt>
-<dd>
-
-</dd>
-
-<dt>
 <h4><a href="https://www.alanwsmith.com/">alanwsmith.com</a></h4>
 <div class="url_display"><a href="https://www.alanwsmith.com/">www.alanwsmith.com</a></div>
 </dt>
@@ -327,7 +255,7 @@
 <div class="url_display"><a href="https://bright-screen-flash-alert.alanwsmith.com/">bright-screen-flash-alert.alanwsmith.com</a></div>
 </dt>
 <dd>
-Designed primarily for streams who work in dark mode. This plays a little yelling sound for chat when they hit a page without it.
+<p>Designed primarily for streams who work in dark mode. This plays a little yelling sound for chat when they hit a page without it.</p>
 </dd>
 
 <dt>
@@ -335,7 +263,7 @@ Designed primarily for streams who work in dark mode. This plays a little yellin
 <div class="url_display"><a href="https://cloudinary-image-maker.alanwsmith.com/">cloudinary-image-maker.alanwsmith.com</a></div>
 </dt>
 <dd>
-  I got tired of trying to assemble Cloudinary urls. Took less time to make this than I spent trying to figure out how to apply text to an image by hand.
+<p>I got tired of trying to assemble Cloudinary urls. Took less time to make this than I spent trying to figure out how to apply text to an image by hand.</p>
 </dd>
 
 <dt>
@@ -343,7 +271,7 @@ Designed primarily for streams who work in dark mode. This plays a little yellin
 <div class="url_display"><a href="https://d3-playground.alanwsmith.com/">d3-playground.alanwsmith.com</a></div>
 </dt>
 <dd>
-A place to mess around with D3. Just getting started on this one: TODO: Move this one to d3-cookbook
+<p>A place to mess around with D3. Just getting started on this one: TODO: Move this one to d3-cookbook</p>
 </dd>
 
 <dt>
@@ -351,7 +279,7 @@ A place to mess around with D3. Just getting started on this one: TODO: Move thi
 <div class="url_display"><a href="https://ec2-blender-renderer.alanwsmith.com/">ec2-blender-renderer.alanwsmith.com</a></div>
 </dt>
 <dd>
-Taking a look at what it would cost to use Amazon AWS EC2 cloud computers to render Blender 3D images
+<p>Taking a look at what it would cost to use Amazon AWS EC2 cloud computers to render Blender 3D images</p>
 </dd>
 
 <dt>
@@ -359,7 +287,7 @@ Taking a look at what it would cost to use Amazon AWS EC2 cloud computers to ren
 <div class="url_display"><a href="https://ec2-price-list.alanwsmith.com/">ec2-price-list.alanwsmith.com</a></div>
 </dt>
 <dd>
-  I finally got fed up with how difficult it is to figure out EC2 pricing so I put this together. (The specific goal at the time was to price out the different GPU instances to look at blender rendering.)
+<p>I finally got fed up with how difficult it is to figure out EC2 pricing so I put this together. (The specific goal at the time was to price out the different GPU instances to look at blender rendering.)</p>
 </dd>
 
 <dt>
@@ -367,7 +295,7 @@ Taking a look at what it would cost to use Amazon AWS EC2 cloud computers to ren
 <div class="url_display"><a href="https://hacking.alanwsmith.com/">hacking.alanwsmith.com</a></div>
 </dt>
 <dd>
-This is what hacking looks like. Also, another site that got 500 for charity as part of <a href="https://dusty.domains/">Dusty Domains</a>
+<p>This is what hacking looks like. Also, another site that got 500 for charity as part of <a href="https://dusty.domains/">Dusty Domains</a></p>
 </dd>
 
 <dt>
@@ -375,7 +303,7 @@ This is what hacking looks like. Also, another site that got 500 for charity as 
 <div class="url_display"><a href="https://horsevatars.alanwsmith.com/">horsevatars.alanwsmith.com</a></div>
 </dt>
 <dd>
-An experiment in making multi-color avatars for <a href="https://frontend.horse/">Frontend Horse</a> 
+<p>An experiment in making multi-color avatars for <a href="https://frontend.horse/">Frontend Horse</a> </p>
 </dd>
 
 <dt>
@@ -383,7 +311,7 @@ An experiment in making multi-color avatars for <a href="https://frontend.horse/
 <div class="url_display"><a href="https://html-animation.alanwsmith.com/">html-animation.alanwsmith.com</a></div>
 </dt>
 <dd>
-The forth experiment in the series six of making site/pages relying on only HTML without JavaScript, CSS, or images. This one produces an animation effect by using meta redirect tags to cycle between pages. (Note that you may have to close the page to stop it)
+<p>The forth experiment in the series six of making site/pages relying on only HTML without JavaScript, CSS, or images. This one produces an animation effect by using meta redirect tags to cycle between pages. (Note that you may have to close the page to stop it)</p>
 </dd>
 
 <dt>
@@ -391,7 +319,7 @@ The forth experiment in the series six of making site/pages relying on only HTML
 <div class="url_display"><a href="https://html-display-board.alanwsmith.com/">html-display-board.alanwsmith.com</a></div>
 </dt>
 <dd>
-  This was the fifth of the six experiments is seeing what can be done with only HTML (no JavaScript, CSS, or images). It uses the deprecated marquee tag to create a scrolling text display
+<p>This was the fifth of the six experiments is seeing what can be done with only HTML (no JavaScript, CSS, or images). It uses the deprecated marquee tag to create a scrolling text display</p>
 </dd>
 
 <dt>
@@ -399,7 +327,7 @@ The forth experiment in the series six of making site/pages relying on only HTML
 <div class="url_display"><a href="https://html-maze.alanwsmith.com/">html-maze.alanwsmith.com</a></div>
 </dt>
 <dd>
-Another of the six experiments to see what can be done with HTML alone. No JavaScript. No CSS. Just tags (including some deprecated ones)
+<p>Another of the six experiments to see what can be done with HTML alone. No JavaScript. No CSS. Just tags (including some deprecated ones)</p>
 </dd>
 
 <dt>
@@ -407,7 +335,33 @@ Another of the six experiments to see what can be done with HTML alone. No JavaS
 <div class="url_display"><a href="https://html-random-pattern.alanwsmith.com/">html-random-pattern.alanwsmith.com</a></div>
 </dt>
 <dd>
-A grid with random colors. The sixth experiment with no javascript, css, or images
+<p>A grid with random colors. The sixth experiment with no javascript, css, or images</p>
+</dd>
+
+<dt>
+<h4><a href="https://ideas.alanwsmith.com/">Ideas!</a></h4>
+<div class="url_display"><a href="https://ideas.alanwsmith.com/">ideas.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A collection of ideas for programming projects if you need something to help get you started</p>
+</dd>
+
+<dt>
+<h4><a href="https://javascript-playground.alanwsmith.com/">JavaScript Playground</a></h4>
+<div class="url_display"><a href="https://javascript-playground.alanwsmith.com/">javascript-playground.alanwsmith.com</a></div>
+</dt>
+<dd>
+<p>A place for me to mess around with javascript to create snippets for
+both understanding how things work and to use to copy into other code</p>
+</dd>
+
+<dt>
+<h4>Links Page &lt;- You Are Here</h4>
+<div class="url_display">links.alanwsmith.com</div>
+</dt>
+<dd>
+<p>Pointers to my tools, projects, and playgrounds and a pitch for making
+sub-domain digital gardens. But you already know that since you're looking at the page :-)</p>
 </dd>
 
 <dt>
@@ -415,7 +369,15 @@ A grid with random colors. The sixth experiment with no javascript, css, or imag
 <div class="url_display"><a href="https://band-names.alanwsmith.com/">band-names.alanwsmith.com</a></div>
 </dt>
 <dd>
-I&apos;m always on the look out for band names. I&apos;ve started collecting them here
+<p>I&apos;m always on the look out for band names. I&apos;ve started collecting them here</p>
+</dd>
+
+<dt>
+<h4><a href="https://jacktorrance.blog/">The Shiny Blog Of Jack Torrance</a></h4>
+<div class="url_display"><a href="https://jacktorrance.blog/">jacktorrance.blog</a></div>
+</dt>
+<dd>
+<p>An homage to The Shining. It's also what I had my site doing <a href="https://web.archive.org/web/20010721234034/http://www.alanwsmith.com/">way back in 2001</a></p>
 </dd>
 
 <dt>
@@ -423,51 +385,9 @@ I&apos;m always on the look out for band names. I&apos;ve started collecting the
 <div class="url_display"><a href="https://dpr.alanwsmith.com/">dpr.alanwsmith.com</a></div>
 </dt>
 <dd>
-A single serving site that shows your current <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/devicePixelRatio">Device Pixel Ratio</a>
+<p>A single serving site that shows your current <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window/devicePixelRatio">Device Pixel Ratio</a></p>
 </dd>
 
-
-
-
-
-
-
-
-
-
-
-        <dt>
-          <a href="https://ideas.alanwsmith.com/">ideas.alanwsmith.com</a>
-        </dt>
-        <dd>
-          A collection of ideas for programming projects if you need something
-          to help get you started
-        </dd>
-
-        <dt><a href="https://jacktorrance.blog/">Jack Torrance Blog</a></dt>
-        <dd>
-          An homage to The Shining. It's also what I had my site doing
-          <a
-            href="https://web.archive.org/web/20010721234034/http://www.alanwsmith.com/"
-            >way back in 2001</a
-          >
-        </dd>
-
-        <dt>
-          <a href="https://javascript-playground.alanwsmith.com"
-            >javascript-playground.alanwsmith.com</a
-          >
-        </dt>
-        <dd>
-          A place for me to mess around with javascript to create snippets for
-          both understanding how things work and to use to copy into other code
-        </dd>
-
-        <dt><strong>links.alanwsmith.com</strong> &lt;- You are here</dt>
-        <dd>
-          Pointers to my tools, projects, and playgrounds and a pitch for making
-          sub-domain digital gardens
-        </dd>
 
         <dt>
           <a href="https://letters.alanwsmith.com/">letters.alanwsmith.com</a>
